welcome.lessons.welcome.array.has271.Has271.scala.error
has271:6: error: value >=- is not a member of Int
    if (nums(i)==nums(i+1)+5 && (nums(i)-(nums(i+2)-1)<=2 && nums(i)-(nums(i+2)-1)>=-2))
                                                                                  ^