welcome.lessons.welcome.array.has271.Has271.scala.code
def has271(nums:Array[Int]): Boolean = {
  var n = nums.length
  var contient = true
  for (i <- 0 to (n-3))
  {
    if (nums(i)==nums(i+1)+5 && (nums(i)-(nums(i+2)-1)<=2 && nums(i)-(nums(i+2)-1)>=-2))
    {
      contient= false
    }
  }
  return contient
}